fixes + mappers+ transportoperation b.logic impl