@@ -1,15 +1,18 @@
 package hu.bme.aut.haulagecompany.service;
 
+import hu.bme.aut.haulagecompany.model.Good;
+import hu.bme.aut.haulagecompany.model.LorrySite;
 import hu.bme.aut.haulagecompany.model.TransportOperation;
+import hu.bme.aut.haulagecompany.model.Vehicle;
 import hu.bme.aut.haulagecompany.model.dto.TransportOperationDTO;
 import hu.bme.aut.haulagecompany.repository.TransportOperationRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.sql.Timestamp;
+import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 @Service
 public class TransportOperationService {
@@ -17,43 +20,96 @@ public class TransportOperationService {
     private final ModelMapper modelMapper;
     private final VehicleService vehicleService;
     private final OrderService orderService;
+    private final LorrySiteService lorrySiteService;
 
     @Autowired
     public TransportOperationService(
             TransportOperationRepository transportOperationRepository,
             VehicleService vehicleService,
             OrderService orderService,
-            ModelMapper modelMapper) {
+            ModelMapper modelMapper,
+            LorrySiteService lorrySiteService) {
         this.transportOperationRepository = transportOperationRepository;
         this.modelMapper = modelMapper;
         this.vehicleService = vehicleService;
         this.orderService = orderService;
+        this.lorrySiteService = lorrySiteService;
     }
 
     public TransportOperationDTO createTransportOperation(TransportOperationDTO transportOperationDTO) {
         TransportOperation transportOperation = convertToEntity(transportOperationDTO);
+        if(!checkVehicleAvailable(transportOperationDTO.getDate(), transportOperationDTO.getUsedVehicleIDs()) && !checkGoodsAvailable(transportOperationDTO)){
+            return null;
+        }
         transportOperation.setUsedVehicles(vehicleService.getVehiclesByIds(transportOperationDTO.getUsedVehicleIDs()));
         transportOperation.setOrder(orderService.getOrderById(transportOperationDTO.getOrderID()));
-
         TransportOperation createdTransportOperation = transportOperationRepository.save(transportOperation);
+
+        var vehicles = vehicleService.getVehiclesByIds(transportOperationDTO.getUsedVehicleIDs());
+        lorrySiteService.removeGoods(vehicles.get(1).getLocation(), orderService.getOrderById(transportOperationDTO.getOrderID()).getGoods());
         return convertToDTO(createdTransportOperation);
+    }
+
+    private boolean checkGoodsAvailable(TransportOperationDTO transportOperationDTO) {
+        var order = orderService.getOrderById(transportOperationDTO.getOrderID());
+        var vehicles = vehicleService.getVehiclesByIds(transportOperationDTO.getUsedVehicleIDs());
+        var lorrySites = new ArrayList<LorrySite>();
+        vehicles.forEach(v -> lorrySites.add(v.getLocation()));
+        var lorrySiteGoods = new ArrayList<Good>();
+        lorrySites.forEach(l -> lorrySiteGoods.addAll(l.getGoods()));
+        var summedGoods = aggregateGoods(lorrySiteGoods);
+        var orderedGoods = order.getGoods();
+        AtomicBoolean res = new AtomicBoolean(true);
+        orderedGoods.forEach(og -> summedGoods.forEach(g -> {
+            if(Objects.equals(og.getName(), g.getName()) && Objects.equals(og.getSize(), g.getSize()) && Objects.equals(og.getWeight(), g.getWeight())
+                    && og.getQuantity() > g.getQuantity()){
+                res.set(false);
+            }
+        }));
+        return res.get();
+    }
+
+    private List<Good> aggregateGoods(ArrayList<Good> goods) {
+        Map<String, Good> aggregatedGoods = new HashMap<>();
+        for (Good good : goods) {
+            String key = getKey(good);
+            if (aggregatedGoods.containsKey(key)) {
+                Good existingGood = aggregatedGoods.get(key);
+                existingGood.setQuantity(existingGood.getQuantity() + good.getQuantity());
+            } else {
+                aggregatedGoods.put(key, good);
+            }
+        }
+        return new ArrayList<>(aggregatedGoods.values());
+    }
+
+    private String getKey(Good good) {
+        return good.getName() + "_" + good.getSize() + "_" + good.getWeight();
+    }
+
+    private boolean checkVehicleAvailable(Timestamp date, List<Long> usedVehicleIDs) {
+        var usedVehicles = vehicleService.getVehiclesByIds(usedVehicleIDs);
+        for(Vehicle v : usedVehicles){
+            var vTO = v.getTransportOperations();
+            for(TransportOperation to: vTO){
+                if(to.getDate().equals(date)){
+                    return false;
+                }
+            }
+        }
+        return true;
     }
 
     public List<TransportOperationDTO> getAllTransportOperations() {
         List<TransportOperation> transportOperations = (List<TransportOperation>) transportOperationRepository.findAll();
         return transportOperations.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TransportOperationDTO getTransportOperationDTOById(Long id) {
         Optional<TransportOperation> transportOperation = transportOperationRepository.findById(id);
         return transportOperation.map(this::convertToDTO).orElse(null);
-    }
-
-    public TransportOperation getTransportOperationById(Long id) {
-        Optional<TransportOperation> transportOperation = transportOperationRepository.findById(id);
-        return transportOperation.orElse(null);
     }
 
     public TransportOperationDTO updateTransportOperation(Long id, TransportOperationDTO updatedTransportOperationDTO) {
@@ -73,6 +129,15 @@ public class TransportOperationService {
     }
 
     public void deleteTransportOperation(Long id) {
+        var tO = transportOperationRepository.findById(id);
+        if(tO.isPresent()){
+            var realTO = tO.get();
+            var lSId = realTO.getUsedVehicles().get(1).getLocation().getId();
+            assert realTO.getOrder() != null;
+            for(Good g : realTO.getOrder().getGoods()){
+                lorrySiteService.addGood(lSId, g);
+            }
+        }
         transportOperationRepository.deleteById(id);
     }
 
